almost everything done in the report

--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -159,9 +159,16 @@
   urldate = {Curso 2020/2021}
 }
 
-@online{computer-graphics-epfl,
+@online{batch-size,
   title = {What's the Optimal Batch Size to Train a Neural Network?},
   author = {Ayush Thakur},
   url = {https://wandb.ai/ayush-thakur/dl-question-bank/reports/What-s-the-Optimal-Batch-Size-to-Train-a-Neural-Network---VmlldzoyMDkyNDU},
   urldate = {2022-05-26}
+}
+
+@online{bias-variance,
+  title = {Gentle Introduction to the Bias-Variance Trade-Off in Machine Learning},
+  author = {Jason Brownlee},
+  url = {https://machinelearningmastery.com/gentle-introduction-to-the-bias-variance-trade-off-in-machine-learning/#:~:text=and%20Logistic%20Regression.-,Variance%20Error,algorithm%20to%20have%20some%20variance},
+  urldate = {2022-06-02}
 }
