--- a/report/prefacios/prefacio.tex
+++ b/report/prefacios/prefacio.tex
@@ -44,7 +44,7 @@ Write here the abstract in English.
 
 
 \begin{flushright}
-Granada a X de mes de 201 .
+Granada, a 7 de julio de 2022.
 \end{flushright}
 
 
@@ -67,7 +67,7 @@ ha sido realizado bajo su supervisión por \textbf{Pedro Bedmar López}, y autor
 
 \vspace{0.5cm}
 
-Y para que conste, expide y firma el presente informe en Granada a X de julio de 2022.
+Y para que conste, expide y firma el presente informe en Granada a 7 de julio de 2022.
 
 \vspace{1cm}
 
