--- a/report/proyecto.tex
+++ b/report/proyecto.tex
@@ -38,6 +38,8 @@
 \usepackage[justification=centering, margin=0.1cm]{caption}
 \usepackage{subcaption}
 \usepackage{multirow}
+\usepackage{enumitem}
+\setlist{nosep} 
 
 \newcommand{\INDSTATE}[1][1]{\STATE\hspace{#1\algorithmicindent}}
 
