--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -155,3 +155,36 @@
   year = {2014},
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@inproceedings{tharatipyakul2012chemex,
+  title={ChemEx: information extraction system for chemical data curation},
+  author={Tharatipyakul, Atima and Numnark, Somrak and Wichadakul, Duangdao and Ingsriswang, Supawadee},
+  booktitle={BMC bioinformatics},
+  volume={13},
+  number={17},
+  pages={1--11},
+  year={2012},
+  organization={Springer}
+}
+
+@article{oldenhof2020chemgrapher,
+  title={ChemGrapher: optical graph recognition of chemical compounds by deep learning},
+  author={Oldenhof, Martijn and Arany, Adam and Moreau, Yves and Simm, Jaak},
+  journal={Journal of chemical information and modeling},
+  volume={60},
+  number={10},
+  pages={4506--4517},
+  year={2020},
+  publisher={ACS Publications}
+}
+
+@article{rajan2020decimer,
+  title={DECIMER: towards deep learning for chemical image recognition},
+  author={Rajan, Kohulan and Zielesny, Achim and Steinbeck, Christoph},
+  journal={Journal of Cheminformatics},
+  volume={12},
+  number={1},
+  pages={1--9},
+  year={2020},
+  publisher={Springer}
+}
