--- a/report/capitulos/02_Planificacion.tex
+++ b/report/capitulos/02_Planificacion.tex
@@ -6,22 +6,22 @@ En los primeros años del desarrollo de software, este se creaba sin seguir ning
 
 Por ello, era necesario crear un marco que permitiera metodizar el desarrollo. Es así como surge la Ingeniería del Software, que acompaña al software durante todo su ciclo vital.
 
-En este proyecto vamos a aplicar este enfoque a la hora de desarrollar el producto, apoyándonos sobre una metodología de desarrollo para asegurarnos que se consiguen los objetivos en el tiempo previsto, detectando posibles amenazas y problemas a tiempo.
+En este proyecto se va a aplicar este enfoque a la hora de desarrollar el producto, apoyándome sobre una metodología de desarrollo para asegurarnos que se consiguen los objetivos en el tiempo previsto, detectando posibles amenazas y problemas a tiempo.
 
 Las metodologías se pueden clasificar en dos grandes bloques \cite{metodologiasDesarrollo}, tradicionales y ágiles. Las tradicionales son las que primero surgieron, se caracterizan por definir rígidamente los requisitos al inicio del proyecto. En ellas, se aplica una serie de etapas de forma lineal, y una vez alcanzada una de ellas no se puede volver atrás. Por todo esto no se adaptan bien a los cambios.
 
-En general, los proyectos de software tienden a ser cada vez más complejos. Las metodologías ágiles surgieron con el objetivo de hacer los proyectos de desarrollo más dinámicos, de forma que se adaptaran mejor al entorno y a los cambios. Se basan en una metodología incremental, donde se van construyendo prototipos del producto poco a poco, añadiendo funcionalidades hasta obtener la aplicación final. Los equipos se reunen cada poco tiempo para intercambiar ideas y repartir las tareas a realizar.
+En general, los proyectos de software tienden a ser cada vez más complejos. Las metodologías ágiles surgieron con el objetivo de hacer los proyectos de desarrollo más dinámicos, de forma que se adaptaran mejor al entorno y a los cambios. Se basan en una metodología incremental, donde se van construyendo prototipos del producto poco a poco, añadiendo funcionalidades hasta obtener la aplicación final. Los equipos se reúnen cada poco tiempo para intercambiar ideas y repartir las tareas a realizar.
 
-A la hora de elegir la metodología que vamos a usar, debemos tener en cuenta los siguientes factores relativos a la naturaleza del proyecto:
+A la hora de elegir la metodología que se va a utilizar, se deben tener en cuenta los siguientes factores relativos a la naturaleza del proyecto:
 
 \begin{itemize}
-    \item Se trata de un proyecto de investigación, donde vamos a aplicar diferentes técnicas de Aprendizaje Automático a la resolución de un problema. Por tanto, a priori no se conoce la calidad de los resultados que se van a obtener y el número y tipo de experimentos que va a ser necesario realizar.
+    \item Se trata de un proyecto de investigación, donde se van a aplicar diferentes técnicas de Aprendizaje Automático a la resolución de un problema. Por tanto, a priori no se conoce la calidad de los resultados que se van a obtener y el número y tipo de experimentos que va a ser necesario realizar.
     \item La intervención del experto en química va a ser fundamental durante el desarrollo del proyecto. Aportará información y feedback esencial durante todas las fases.
 \end{itemize}
 
-Por estas razones, creemos que la metodología de desarrollo que mejor se adapta a nuestras necesidades es una metodología ágil, ya que nos provee de gran flexibilidad, permitiendo el desarrollo del proyecto de una forma incremental donde obtenemos feedback del cliente y experto en cada iteración.
+Por estas razones, creo que la metodología de desarrollo que mejor se adapta a nuestras necesidades es una metodología ágil, ya que nos provee de gran flexibilidad, permitiendo el desarrollo del proyecto de una forma incremental donde obtengo feedback del cliente y experto en cada iteración.
 
-Revisando las distintas metodologías \cite{despa2014comparative}, creemos que una buena candidata es SCRUM \cite{schwaber1997scrum}. Es posiblemente una de las más utilizadas en la actualidad, y los proyectos que la aplican cuentan con las siguientes características:
+Revisando las distintas metodologías \cite{despa2014comparative}, creo que una buena candidata es SCRUM. Es posiblemente una de las más utilizadas en la actualidad, y los proyectos que la aplican cuentan con las siguientes características \cite{schwaber1997scrum}:
 
 \begin{itemize}
     \item \textbf{Entregable flexible:} Su contenido viene dado por lo que demanda el entorno. 
@@ -31,7 +31,7 @@ Revisando las distintas metodologías \cite{despa2014comparative}, creemos que u
     \item \textbf{Colaboración:} La colaboración entre todos los miembros del equipo es muy alta, así como entre el equipo y entidades externas como el cliente.
 \end{itemize}
 
-Cuando se trabaja con esta metodología, en cada equipo existe un miembro conocido como SCRUM manager. Es el encargado de guiar al equipo en el desarrollo y en la aplicación de la metodología. En SCRUM el equipo es muy importante y todos sus miembros participan con su opinión. Esta metodología consta de las siguientes fases:
+Cuando se trabaja con esta metodología, en cada equipo existe un miembro conocido como SCRUM manager. Es el encargado de guiar al equipo en el desarrollo y en la aplicación de la metodología. En SCRUM el equipo es muy importante y todos sus miembros participan con su opinión. Esta metodología consta de las siguientes fases \cite{schwaber1997scrum}:
 
 % TODO: Si fuera necesario, añadir información sobre los tipos de equipos. En el paper de SCRUM aparece información sobre estos.
 
@@ -64,7 +64,7 @@ Cuando se trabaja con esta metodología, en cada equipo existe un miembro conoci
 
 Estas características y fases que hemos mencionado son las especificadas en la definición original de SCRUM. Aún así, en la práctica cada proyecto las adapta a sus necesidades. En general, los sprints suelen tener una duración de 2 o 3 semanas. 
 
-\section{Planificación}
+\section{Planificación} \label{planificacion}
 Para lograr cumplir con los objetivos, se planifican las siguientes tareas a realizar:
 \begin{itemize}
     \item \textbf{[T1]} Estudio del estado del arte del problema.
@@ -75,13 +75,13 @@ Para lograr cumplir con los objetivos, se planifican las siguientes tareas a rea
     \end{itemize}
     \item \textbf{[T2]} Estudio del \textit{dataset} de imágenes químicas existente para su adecuación a tareas de clasificación.
     \begin{itemize}
-        \item \textbf{[T2.1]} Balancear el dataset.
-        \item \textbf{[T2.2]} Adaptación de un modelo de síntesis de imágenes para generar \textit{hard-negatives} y añadirlos al \textit{dataset}, de forma que el clasificador sea capaz de trabajar con ejemplos difíciles.
+        \item \textbf{[T2.1]} Mejorar el balanceo del \textit{dataset}.
+        \item \textbf{[T2.2]} Adaptación de un modelo de síntesis de imágenes para generar \textit{hard negatives} y añadirlos al \textit{dataset}, de forma que el clasificador sea capaz de trabajar con ejemplos difíciles.
     \end{itemize}
-    \item \textbf{[T3]} Implementación de un modelo clasificador de imágenes, capaz de distinguir moléculas de ejemplos negativos.
+    \item \textbf{[T3]} Implementación de dos modelos clasificadores de imágenes, capaces de distinguir moléculas de ejemplos negativos, uno entrenado sobre un \textit{dataset} sin \textit{hard negatives} y otro entrenado sobre un conjunto de datos con ellos.
     \begin{itemize}
-        \item \textbf{[T3.1]} Entrenar sobre el dataset original y sobre el que contiene \textit{hard negatives}.
-        \item \textbf{[T3.2]} Realizar pruebas con diferentes arquitecturas e hiperparámetros para comprobar cuáles se adaptan mejor al problema.
+        \item \textbf{[T3.1]} Realizar pruebas con diferentes arquitecturas e hiperparámetros para comprobar cuáles se adaptan mejor al problema.
+        \item \textbf{[T3.2]} Escoger la configuración que tendrán los modelos finales. 
     \end{itemize}
     \item \textbf{[T4]} Documentación del trabajo realizado.
 \end{itemize}
@@ -90,7 +90,11 @@ Para el éxito del proyecto es necesario asignar una temporización razonable a 
 
 Los TFGs se suelen realizar en un único cuatrimestre, que normalmente coincide con el último del grado. Esto significa cuatro meses en los que repartir las 300 horas, desde marzo hasta junio. Bien es cierto que este proyecto se empezó con algo de anterioridad, en febrero, para comenzar a profundizar en la literatura y conocer de forma más precisa las necesidades de los investigadores de Negev.
 
-(Insertar diagrama de Gantt con las tareas/objetivos y su temporización)
+\begin{figure}[H]
+\centering
+    \fbox{\includegraphics[scale=0.38]{imagenes/gantt.png}}  
+    \caption{Diagrama de Gantt con la temporización de las tareas.} \label{fig:figura1}
+\end{figure}
 
 \section{Gestión de recursos}
 
@@ -103,7 +107,7 @@ Los TFGs se suelen realizar en un único cuatrimestre, que normalmente coincide 
 
 \subsection{Recursos materiales}
 
-Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gran infraestructura para llevarse a cabo. En nuestro caso hacemos uso de lo siguiente:
+Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gran infraestructura para llevarse a cabo. En este caso se hace uso de lo siguiente:
 \begin{itemize}
     \item \textbf{Ordenador personal.} Equipo desde el que trabajará el estudiante. Lo utilizará para consultar la literatura, implementar el código y redactar la memoria. En concreto, se trata de un MacBook Pro 15' 2015, que monta un procesador Intel Core i7 a 2.5 GHz y 16 GB de RAM.
     \item \textbf{Monitor.} Utilizado como apoyo a la pantalla del portátil. El modelo utilizado ha sido fabricado por la marca Benq, y presenta una resolución 1920x1080.
@@ -111,7 +115,7 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
 \end{itemize}
 
 \subsection{Recursos software}
-\noindent Utilizamos distintos programas que nos apoyan en distintas tareas:
+\noindent Se utilizan distintos programas que apoyan en distintas tareas:
 \begin{itemize}
     \item \textbf{macOS Monterey 12.3.1.} Por encima del resto de programas, se encuentra el Sistema Operativo, encargado de administrar los recursos hardware y controlar la ejecución de procesos.
     \item \textbf{PyCharm 2021.3.3.} IDE desarrollado por la compañía JetBrains, ideal para trabajar con proyectos en Python e incluso con Jupyter Notebooks. Además, se integra directamente mediante SSH con el clúster GPU, permitiendo la sincronización de ficheros entre el espacio de trabajo local y el remoto. Aunque es un software de pago, los estudiantes pueden descargarlo de forma gratuita.
@@ -121,7 +125,7 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
 \end{itemize}
 
 \section{Presupuesto}
-En esta sección presentamos el presupuesto del proyecto.
+En esta sección se presenta el presupuesto del proyecto.
 
 \subsection{Coste de recursos humanos}
 La mayor parte del coste vendrá generado por las horas de trabajo dedicadas al proyecto por el alumno.
